# ch32-hal-template

./: Cargo.toml  README-TEMPLATE.md  README.md  README.template  build.rs  cargo-generate.toml  post-script.rhai  pre-script.rhai  riscv32ec-unknown-none-elf.json  riscv32emc-unknown-none-elf.json  riscv32imfc-unknown-none-elf.json  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: build.yml
src/: main.rs
