[package]
name = "{{ project-name }}"
version = "0.1.0"
authors = ["{{ authors }}"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
ch32-hal = { git = "https://github.com/ch32-rs/ch32-hal.git", features = [
    "{{ mcu }}",
    "embassy",
    "time-driver-tim2",
    "rt",
] }
embassy-executor = { version = "0.5.0", features = [
    "nightly",
    "integrated-timers",
    "arch-riscv32",
    "executor-thread",
] }
embassy-time = { version = "0.3.0" }
qingke-rt = "0.2.1"
qingke = "0.2.0"
embedded-hal = "1.0.0"
panic-halt = "0.2.0"

[profile.release]
strip = false     # symbols are not flashed to the microcontroller, so don't strip them.
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
