[package]
name = "{{ project-name }}"
version = "0.1.0"
authors = ["{{ authors }}"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "{{ project-name }}"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[dependencies]
{% if embassy_dep -%}
ch32-hal = { git = "https://github.com/ch32-rs/ch32-hal.git", features = [
    "{{ mcu }}",
    "embassy",
{%- else -%}
ch32-hal = { git = "https://github.com/ch32-rs/ch32-hal.git", default-features = false, features = [
    "{{ mcu }}",
{%- endif %}
    "time-driver-tim2",
    "rt",
    "memory-x",
] }
{% if embassy_dep -%}
embassy-executor = { version = "0.6.1", features = [
    "integrated-timers",
    "arch-spin",
    "executor-thread",
    "task-arena-size-192", # or better use nightly, but fails on recent Rust versions
] }
embassy-time = { version = "0.3.0" }
{%- endif %}
qingke-rt = "0.5.0"
qingke = "0.5.0"
embedded-hal = "1.0.0"
panic-halt = "1.0.0"

[profile.dev]
opt-level = 's'

[profile.release]
strip = false     # symbols are not flashed to the microcontroller, so don't strip them.
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
